--- a/src/package.json
+++ b/src/package.json
@@ -38,6 +38,7 @@
         "newman": "4.3.1",
         "node-rest-client": "3.1.0",
         "node-gyp": "3.8.0",
+        "node-schedule":"1.3.2",
         "object-unset": "1.0.1",
         "q": "1.5.1",
         "stack-trace": "0.0.10",
